hphp/test/zend/good/ext/standard/tests/general_functions/get_include_path_basic.php.expectf
*** Testing get_include_path()
string(1) "."
PASSED

Error cases:

Warning: get_include_path() expects exactly 0 parameters, 1 given in %s/get_include_path_basic.php on line 18
===DONE===
